# uripp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cpp-stat-analyze.yaml
include/: futures.h  uripp.h
include/futures/: func.h
src/: CMakeLists.txt  lib.cpp
test/: CMakeLists.txt  main.cpp  main.h
